--- a/MicroServices/APIs/Albums/Albums.API/Albums.API.csproj
+++ b/MicroServices/APIs/Albums/Albums.API/Albums.API.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FastEndpoints" Version="5.20.1.3-beta" />
+  </ItemGroup>
+
 </Project>
