updated orderdto. added order and orderdetail models. started with OrderRepository

--- a/MicroServices/APIs/Orders/Orders.DataAccess/Orders.DataAccess.csproj
+++ b/MicroServices/APIs/Orders/Orders.DataAccess/Orders.DataAccess.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MongoDB.Driver" Version="2.23.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\..\Domain\Domain.Common\Domain.Common.csproj" />
+  </ItemGroup>
+
 </Project>
