--- a/MicroServices/APIs/Albums/Albums.API/Albums.API.csproj
+++ b/MicroServices/APIs/Albums/Albums.API/Albums.API.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -13,5 +13,9 @@
   <ItemGroup>
     <PackageReference Include="FastEndpoints" Version="5.20.1.3-beta" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Albums.DataAccess\Albums.DataAccess.csproj" />
   </ItemGroup>
 </Project>
