--- a/Domain/Domain.Common/Domain.Common.csproj
+++ b/Domain/Domain.Common/Domain.Common.csproj
@@ -11,4 +11,8 @@
     <Folder Include="Interfaces\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MongoDB.Bson" Version="2.22.0" />
+  </ItemGroup>
+
 </Project>
