--- a/MicroServices/APIs/Orders/Orders.API/Orders.API.csproj
+++ b/MicroServices/APIs/Orders/Orders.API/Orders.API.csproj
@@ -10,7 +10,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FastEndpoints" Version="5.20.1" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\..\Domain\Domain.Common\Domain.Common.csproj" />
+    <ProjectReference Include="..\Orders.DataAccess\Orders.DataAccess.csproj" />
   </ItemGroup>
 
 </Project>
