--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ networks:
   customers:
   orders:
   gateway:
+  albumsmq:
 
 services:
   albums.api:
@@ -12,6 +13,7 @@ services:
     networks:
       - albums
       - gateway
+      - albumsmq
     build:
       context: .
       dockerfile: MicroServices/APIs/Albums/Albums.API/Dockerfile
@@ -104,3 +106,5 @@ services:
     environment:
       - RABBITMQ_DEFAULT_USER=guest
       - RABBITMQ_DEFAULT_PASS=guest
+    networks:
+      - albumsmq
