--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
   albums.api:
     image: ${DOCKER_REGISTRY-}albumsapi
     networks:
-      - albums
+      - album
       - gateway
       - albumsmq
     build:
